@@ -8,16 +8,21 @@ import com.logstream.dto.LogEntryRequest;
 import com.logstream.dto.LogEntryResponse;
 import com.logstream.model.LogEntry;
 import com.logstream.model.LogLevel;
+import com.logstream.model.RetentionPolicy;
 import com.logstream.repository.LogEntryRepository;
+import com.logstream.repository.RetentionPolicyRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Instant;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.time.format.DateTimeParseException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,22 +30,30 @@ public class IngestionService {
 
     private final LogEntryRepository logEntryRepository;
     private final ObjectMapper objectMapper;
+    private final RetentionPolicyRepository retentionPolicyRepository;
+    private final BatchPersistenceService batchPersistenceService;
 
     public Page<LogEntryResponse> getLogs(int page, int size) {
         Pageable pageable = PageRequest.of(page, Math.min(size, 50));
         return logEntryRepository.findAll(pageable).map(this::mapToResponse);
     }
 
+    @Transactional
     public LogEntryResponse ingestLog(LogEntryRequest request) {
         LogEntry entry = mapToEntity(request);
         LogEntry saved = logEntryRepository.save(entry);
+        createRetentionPolicyFromLogEntry(entry.getServiceName());
         return mapToResponse(saved);
     }
 
+    @Transactional
     public BatchLogEntryResponse ingestBatch(BatchLogRequest request) {
-        List<LogEntry> entries = request.getLogs().stream()
+        List<LogEntry> entries = request.getLogs()
+                .stream()
                 .map(this::mapToEntity)
-                .collect(Collectors.toList());
+                .toList();
+
+        batchPersistenceService.persistBatchLogEntriesWithRetentionPolicy(entries, retentionPolicyRepository);
         logEntryRepository.saveAll(entries);
         return new BatchLogEntryResponse(entries.size());
     }
@@ -57,11 +70,34 @@ public class IngestionService {
     private LogEntry mapToEntity(LogEntryRequest request) {
         return LogEntry.builder()
                 .serviceName(request.getServiceName())
-                .timestamp(Instant.now())
+                .timestamp(parseTimestamp(request.getTimestamp()))
                 .level(LogLevel.valueOf(request.getLevel()))
                 .message(request.getMessage())
                 .source(request.getSource())
                 .build();
+    }
+
+    private Instant parseTimestamp(String timestamp) {
+        if (timestamp == null || timestamp.isBlank()) {
+            return Instant.now();
+        }
+        try {
+            return Instant.parse(timestamp);
+        } catch (DateTimeParseException e) {
+            return LocalDateTime.parse(timestamp).toInstant(ZoneOffset.UTC);
+        }
+    }
+
+    private void createRetentionPolicyFromLogEntry(String serviceName) {
+        if (retentionPolicyRepository.existsByServiceNameIgnoreCase(serviceName)) {
+            return;
+        }
+        RetentionPolicy policy = new RetentionPolicy();
+        policy.setServiceName(serviceName);
+        policy.setRetentionDays(30);
+        policy.setArchiveEnabled(false);
+        policy.setCreatedAt(Instant.now());
+        retentionPolicyRepository.save(policy);
     }
 
     private LogEntryResponse mapToResponse(LogEntry e) {
